// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextPlaceholder should be rendered correctly 1`] = `
<div
  className="container"
>
  <span
    className="loadingWord color-night100 animatedLoading"
    dangerouslySetInnerHTML={
      Object {
        "__html": "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;",
      }
    }
  />
</div>
`;

exports[`TextPlaceholder should be rendered correctly with extra props 1`] = `
<div
  className="container"
>
  <span
    className="loadingWord color-sun"
    dangerouslySetInnerHTML={
      Object {
        "__html": "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;",
      }
    }
  />
  <span
    className="loadingWord color-sun"
    dangerouslySetInnerHTML={
      Object {
        "__html": "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;",
      }
    }
  />
  <span
    className="loadingWord color-sun"
    dangerouslySetInnerHTML={
      Object {
        "__html": "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;",
      }
    }
  />
  <span
    className="loadingWord color-sun"
    dangerouslySetInnerHTML={
      Object {
        "__html": "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;",
      }
    }
  />
  <span
    className="loadingWord color-sun"
    dangerouslySetInnerHTML={
      Object {
        "__html": "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;",
      }
    }
  />
  <span
    className="loadingWord color-sun"
    dangerouslySetInnerHTML={
      Object {
        "__html": "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;",
      }
    }
  />
  <span
    className="loadingWord color-sun"
    dangerouslySetInnerHTML={
      Object {
        "__html": "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;",
      }
    }
  />
  <span
    className="loadingWord color-sun"
    dangerouslySetInnerHTML={
      Object {
        "__html": "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;",
      }
    }
  />
  <span
    className="loadingWord color-sun"
    dangerouslySetInnerHTML={
      Object {
        "__html": "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;",
      }
    }
  />
  <span
    className="loadingWord color-sun"
    dangerouslySetInnerHTML={
      Object {
        "__html": "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;",
      }
    }
  />
</div>
`;
